--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 atomicwrites
 democritus-hashes @ git+https://github.com/democritus-project/democritus-hashes.git#egg=democritus-hashes
+
+importlib-metadata; python_version < '3.8'
