--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 atomicwrites
-democritus-hashes @ git+https://github.com/democritus-project/democritus-hashes.git#egg=democritus-hashes
-
+democritus-hashes
 importlib-metadata; python_version < '3.8'
