--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,4 @@ universal = 1
 max-line-length = 120
 per-file-ignores = 
 	d8s_file_system/__init__.py:F403,F401
-	tests/*:E501
+	tests/*:E501,CCR001
